[package]
name = "brainfrick-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "brainfrick"
path = "src/main.rs"

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
getch = "0.3.1"
